@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - Silence even more warnings above 5.17.10 (RJBS)
 
 0.003003  2013-04-10 06:38:29 CST6CDT
     - Silence warnings above 5.17.10
